fix nav spacing (#19)

--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -12,12 +12,28 @@
   margin-left: 50px;
 }
 
+.flex-grow-2 {
+  flex-grow: 2;
+}
+
 body {
   background-color: #ffdeaf;
 }
 
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+html,
+body {
+  height: 100%;
+}
+body {
+  margin: 0;
+  font-family: Roboto, "Helvetica Neue", sans-serif;
+}
 
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+html,
+body {
+  height: 100%;
+}
+body {
+  margin: 0;
+  font-family: Roboto, "Helvetica Neue", sans-serif;
+}
